--- a/skillsets.html
+++ b/skillsets.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Skillsets - Nikhil Prabhu k</title>
+        <title>Skillsets - Nikhil Prabhu K</title>
         <link rel="stylesheet" href="skillsets.css">
         <link rel="fa-arrow-up" href="arrowup.svg">
         <script src="https://kit.fontawesome.com/4a0da9e824.js" crossorigin="anonymous"></script>
