--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Projects - Nikhil Prabhu k</title>
+        <title>Projects - Nikhil Prabhu K</title>
         <link rel="stylesheet" href="projects.css">
         <link rel="fa-arrow-up" href="arrowup.svg">
         <script src="https://kit.fontawesome.com/4a0da9e824.js" crossorigin="anonymous"></script>
