My Personal Website

--- a/social.html
+++ b/social.html
@@ -19,6 +19,7 @@
                     <li class="navli"><a class="nava" href="index.html">Home</a></li>
                     <li class="navli"><a class="nava" href="#">Skillsets</a></li>
                     <li class="navli"><a class="nava" href="projects.html">Projects</a></li>
+                    <li class="navli"><a class="nava" href="resume.html">Resume</a></li>
                     <li class="navli"><a class="nava" href="#">Social Media</a></li>
                 </div>
             </ul>
