--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
                     <li class="navli"><a class="nava" href="index.html">Home</a></li>
                     <li class="navli"><a class="nava" href="skillsets.html">Skillsets</a></li>
                     <li class="navli"><a class="nava" href="#">Projects</a></li>
+                    <li class="navli"><a class="nava" href="resume.html">Resume</a></li>
                     <li class="navli"><a class="nava" href="social.html">Social Media</a></li>
                 </div>
             </ul>
