--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="hobbyblock">
                     <h2 class="hobbyname">Personal Finance</h2>
                     <p class="hobbyinfo">
-                        What I mean by mentioning personal finance is, I am much intrested in finance especially equity market. Its completely not about spending or managing money. I do fundamental analysis of the listed companies. In brief fundemental analysis means the financials, balace sheets, various ratiosb related to financials, the products and its demand in future, their business model and many other things like such.<br> I also do technical analysis. There are differnet technical ways to analyze. I use Candelstick patterns with RSI and MACD. It helps us to find the support and resistance in the price of any stock. Its the ratios, patterns, symetries, cycles which helps in doing analysis and I realized how amazing these things are and How accurate they are.
+                        What I mean by mentioning personal finance is, I am much intrested in finance especially equity market. Its completely not about spending or managing money. I do fundamental analysis of the listed companies. In brief fundemental analysis means the financials, balace sheets, various ratios related to financials, the products and its demand in future, their business model and many other things like such.<br> I also do technical analysis. There are differnet technical ways to analyze. I use Candelstick patterns with RSI and MACD. It helps us to find the support and resistance in the price of any stock. Its the ratios, patterns, symetries, cycles which helps in doing analysis and I realized how amazing these things are and How accurate they are.
                 </div>
             </div>
         </div>
