--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
                     Step 7: If ‘n’ key is pressed it will turn on night mode.<br>
                     Step 8: Stop
                 </p>
-                <center><iframe class="projectimg" src="https://drive.google.com/file/d/14O0wq4Befn-BKv2DVU8tKGajGa0u-9nW/preview" width="640" height="480" allow="autoplay"></iframe></center>
+                <center><iframe class="projectimg" src="https://drive.google.com/file/d/14O0wq4Befn-BKv2DVU8tKGajGa0u-9nW/preview" width="100%" height="100%" allow="autoplay"></iframe></center>
                 <h2>My role in the team</h2>
                 <p class="para">
                     I was part of team of two. Me and my team mate together designed and worked on the whole project. This was the first mini project on Computer Graphics. 
