--- a/skillsets.html
+++ b/skillsets.html
@@ -44,9 +44,10 @@
                 <ul class="ul1">
                     <li class="li1">Creative</li>
                     <li class="li1">Flexible</li>
-                    <li class="li1">Web Development: HTML, CSS, JavaScript, Django</li>
-                    <li class="li1">SQL</li>
-                    <li class="li1">Android Application Development</li>
+                    <li class="li1">Leadership</li>
+                    <li class="li1">Teamwork</li>
+                    <li class="li1">Punctual</li>
+                    <li class="li1">Patience</li>
                 </ul>
             </div>
             <br><br><hr><hr>
