My personal website

--- a/hicking.html
+++ b/hicking.html
@@ -197,8 +197,8 @@
                 <h2 class="placename">4th Oct 2020 - Ermayi Falls, Ujjire</h2>
                 <div class="">
                     <figure>
-                        <img src="images/ermayi.jpg" alt="Jhari Falls" class="landimg" style="width: 40%; " >
-                        <figcaption class="caption" style="width: 65%; margin-left: 17.5%;">Ermai Falls, a secret multi-layered waterfall hidden in the foothills of the Ballalarayana Durga range of western ghats in Dakshina Kannada. It is a seasonal waterfall, which comes to full glory in the peak monsoon season. Thick foam-like water slides down the rocky terrain from 75ft  and forms a pool at the bottom. The pool is about 5 ft deep and you can waive off the day by going for a swim or taking dip water.</figcaption>
+                        <img src="images/ermayi.jpg" alt="Ermayi Falls" class="sinpotrimg" >
+                        <figcaption class="caption">Ermai Falls, a secret multi-layered waterfall hidden in the foothills of the Ballalarayana Durga range of western ghats in Dakshina Kannada. It is a seasonal waterfall, which comes to full glory in the peak monsoon season. Thick foam-like water slides down the rocky terrain from 75ft  and forms a pool at the bottom. The pool is about 5 ft deep and you can waive off the day by going for a swim or taking dip water.</figcaption>
                     </figure>
                 </div>
             </div>
@@ -208,8 +208,8 @@
                 <h2 class="placename">4th Oct 2020 - Didupe Falls, Ujjire</h2>
                 <div class="">
                     <figure>
-                        <img src="images/didupe.jpg" alt="Jhari Falls" class="landimg" style="width: 40%; " >
-                        <figcaption class="caption" style="width: 65%; margin-left: 17.5%;">Didupe falls is an untouched beauty that hides at the base of Charmadi ghat in western ghats of Dakshina Kannada Crystal clear water plunges from a 70 ft rocky cliff and splashes the ground with a great force. This falls which is 40 Kilometers from Ujire town is surrounded by rocky terrains and dense misty forests on most sides.</figcaption>
+                        <img src="images/didupe.jpg" alt="Didupe Falls" class="sinpotrimg">
+                        <figcaption class="caption" >Didupe falls is an untouched beauty that hides at the base of Charmadi ghat in western ghats of Dakshina Kannada Crystal clear water plunges from a 70 ft rocky cliff and splashes the ground with a great force. This falls which is 40 Kilometers from Ujire town is surrounded by rocky terrains and dense misty forests on most sides.</figcaption>
                     </figure>
                 </div>
             </div>
@@ -219,8 +219,8 @@
                 <h2 class="placename">4th Oct 2020 - Charmady</h2>
                 <div class="">
                     <figure>
-                        <img src="images/charmadi.jpg" alt="Jhari Falls" class="landimg" style="width: 40%; " >
-                        <figcaption class="caption" style="width: 65%; margin-left: 17.5%;">Some where between the ghats of Charmady</figcaption>
+                        <img src="images/charmadi.jpg" alt="Charmady" class="sinpotrimg" >
+                        <figcaption class="caption" >Some where between the ghats of Charmady</figcaption>
                     </figure>
                 </div>
             </div>
@@ -230,13 +230,13 @@
                 <h2 class="placename">30th Aug 2020 - Devaramane Hills, Charmady</h2>
                 <div class="">
                     <figure>
-                        <img src="images/devaramane3.jpg" alt="Jhari Falls" class="landimg" style="width: 80%; " >
+                        <img src="images/devaramane3.jpg" alt="Devaramane Hills" class="landimg" style="width: 90%; " >
                         <figcaption class="caption" style="width: 65%; margin-left: 17.5%;">We visited this place during the visit to Didupe Falls.</figcaption>
                     </figure>
                 </div>
                 <div class="">
                     <figure>
-                        <img src="images/devaramane4.jpg" alt="Jhari Falls" class="landimg" style="width: 80%; " >
+                        <img src="images/devaramane4.jpg" alt="Deavaramane Hills" class="landimg" style="width: 90%; " >
                         <figcaption class="caption" style="width: 65%; margin-left: 17.5%;">Woww!! Amazing hills</figcaption>
                     </figure>
                 </div>
@@ -248,14 +248,14 @@
                 <h2 class="placename">25th Aug 2020 - Durga Falls, Karkala</h2>
                 <div class="partleft">
                     <figure>
-                        <img src="images/durga (1).jpg" alt="Jhari Falls" class="landimg" >
+                        <img src="images/durga (1).jpg" alt="Durga Falls" class="landimg" >
                         <figcaption class="caption">This falls is about 3 to 4 kilometers away from the main city of Karkala.</figcaption>
                     </figure>
                 
                 </div>
                 <div class="partright">
                     <figure>
-                        <img src="images/durga (2).jpg" alt="Jhari Falls" class="landimg">
+                        <img src="images/durga (2).jpg" alt="Durga Falls" class="landimg">
                     <figcaption class="caption">We regularly go this place during our free times.</figcaption>
                     </figure>
                 </div>
@@ -266,14 +266,14 @@
                 <h2 class="placename">2nd Aug 2020 - Sea Walk & Beach, Malpe</h2>
                 <div class="partleft">
                     <figure>
-                        <img src="images/malpe (1).jpg" alt="Jhari Falls" class="potrimg" >
+                        <img src="images/malpe (1).jpg" alt="Sea walk malpe" class="potrimg" >
                         <figcaption class="caption">Malpe is natural port and a major fishing harbor on the Karnataka coast.</figcaption>
                     </figure>
                 
                 </div>
                 <div class="partright">
                     <figure>
-                        <img src="images/malpe (2).jpg" alt="Jhari Falls" class="landimg">
+                        <img src="images/malpe (2).jpg" alt="sea walk malpe" class="landimg">
                     <figcaption class="caption">Me and my friends through the sea walk in Malpe.</figcaption>
                     </figure>
                 </div>
