--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
         <div class="maincont">
             <h2 class="sidehead">Website for KnowledgeWare</h2>
             <h3 class="subsidehead">Domain: HTML, CSS, PHP, JavaScript</h3>
-            <center><a href="https://www.knowledgeware.in/Automation/" class="imglink" target="_blank"><img src="images/kw.png" style="width: 80%;"></a></center>
+            <center><a href="https://www.knowledgeware.in/Automation/" class="imglink" target="_blank"><img src="images/kw.png"></a></center>
             <p class="description">
                 This is a website designed for a training institute that consist of all basic tool elements like Text box, Check box, Radio Buttons, Buttons, Links etc. This also consists Forms, Alerts, Frames, Windows, Widgets and Quiz.<br>
                 This helps the institute to train, demonstrate and explain the basic concepts of HTML, CSS, JavaScript and PHP to their students easily. The website visiters can also contact the company to join for Selenium Certification Training through the advertisement in the top of the webpage.<br>
@@ -68,11 +68,11 @@
 
             <h2 class="sidehead">Internship<br>Website for Sri Maruthi Pharma</h2>
             <h3 class="subsidehead">Domain: HTML, CSS, PHP, MYSQL, Bootstrap</h3>
-            <center><a href="https://prabhonik.github.io/Sri-Maruthi-Pharma/index.html" class="imglink" target="_blank"><img src="images/smp.png" style="width: 80%;"></a></center>
+            <center><a href="https://prabhonik.github.io/Sri-Maruthi-Pharma/index.html" class="imglink" target="_blank"><img src="images/smp.png"></a></center>
             <p class="description">
                 I had an opportunity to be an intern for Bionic Engineers, Bangalore. I worked there from 19th August 2021 to 27th September 2021. We as a team developed a website for a "Sri Maruthi Pharma". The project had both functional web pages and the backend database.
             </p><br>
-            <center><a href="https://prabhonik.github.io/Sri-Maruthi-Pharma/index.html" class="imglink" target="_blank"><img src="images/smpadmin.png" style="width: 80%;"></a></center>
+            <center><a href="https://prabhonik.github.io/Sri-Maruthi-Pharma/index.html" class="imglink" target="_blank"><img src="images/smpadmin.png" ></a></center>
             <p class="description">
                 My role in the team was to work on the backend. With the good coordination from the team I successfully created a webpage to take data from the contact us page and save it in the database. The data can be viewed by the admin in admin page. Only the company employee can login to view the feedback submitted by the customers or clients of the company. The admin page has some functionalities like sort, search and delete. 
             </p>
@@ -82,7 +82,7 @@
 
             <h2 class="sidehead">Tributes to fallen heros during the pandemic</h2>
             <h3 class="subsidehead">Domain: HTML, CSS</h3>
-            <center><a href="https://prabhonik.github.io/tribute.github.io/" class="imglink" target="_blank"><img src="images/t2d.png" style="width: 80%;"></a></center>
+            <center><a href="https://prabhonik.github.io/tribute.github.io/" class="imglink" target="_blank"><img src="images/t2d.png" ></a></center>
             <p class="description">
                 This project is based on Web Development And its Applications. The main objective of this project is to learn the implementation of HTML and CSS. The basic webpage of this project is created using HTML and styling of the webpage is done using CSS.<br>
                 The main theme behind the project is to pay tribute to Frontline healthcare workers:<br>
@@ -101,9 +101,9 @@
 
             <h2 class="sidehead">Online Food Ordering Android Application</h2>
             <h3 class="subsidehead">Domain: Java, XML, PHP, MYSQL</h3>
-            <center><a href="https://prabhonik.github.io/tribute.github.io/" class="imglink" target="_blank"><img src="images/hp1.jpg" style="width: 80%;"></a></center>
+            <center><a href="https://prabhonik.github.io/tribute.github.io/" class="imglink" target="_blank"><img src="images/hp1.jpg" ></a></center>
             <br><br>
-            <center><a href="https://prabhonik.github.io/tribute.github.io/" class="imglink" target="_blank"><img src="images/hp2.jpg" style="width: 80%;"></a></center>
+            <center><a href="https://prabhonik.github.io/tribute.github.io/" class="imglink" target="_blank"><img src="images/hp2.jpg" ></a></center>
             <p class="description">
                 This project is based on mobile android application. The purpose of this project is making local home food ordering application based on Android with Login and register, Food Lists, Food Description and Order History features. With the theme ‘Buy Local, Be Local’ the customers can buy local homemade food products through this app by online. The idea is to give e-commerce online platform to the entrepreneur. The customers can select the product they want, read the description, select the quantity they need and order the products. The customers can also see the history of their purchases. We have used MySQL for database to store data using PHP and used Heroku as the server.
             </p>
@@ -121,7 +121,7 @@
 
             <h2 class="sidehead">Crime Record Management System</h2>
             <h3 class="subsidehead">Domain: HTML, CSS, PHP, Bootstrap, MYSQLI</h3>
-            <center><a href="https://criminalrecordmanagement.herokuapp.com/" class="imglink" target="_blank"><img src="images/crms.png" style="width: 80%;"></a></center>
+            <center><a href="https://criminalrecordmanagement.herokuapp.com/" class="imglink" target="_blank"><img src="images/crms.png" ></a></center>
             <p class="description">
                 The Criminal Record Management System applies to police stations across the district and specifically looks into the subject crime detection, conviction of criminals depending on a highly responsive backbone of information management. The efficiency of the police and the effectiveness with which it tackles crime depend on what quality of information it can derive from its existing records and how fast it can have access to it. This system is made to keep the records about the prisoners and about the crimes. Police can login as a user and can add the details of prisoners like name, date of birth, address, crime and etc. Police can add other police for the first time. Police also has all the authority to add crime, criminals, court, prison, category, court type and Category of crime.<br><br>
                 This software involves:
@@ -151,7 +151,7 @@
 
             <h2 class="sidehead">Boat moving in a river</h2>
             <h3 class="subsidehead">Domain: Glut32, C++</h3>
-            <center><iframe class="projectimg" src="https://drive.google.com/file/d/14O0wq4Befn-BKv2DVU8tKGajGa0u-9nW/preview" width="100%" height="600px" allow="autoplay" style="width: 80%;"></iframe></center>
+            <center><iframe class="projectimg" src="https://drive.google.com/file/d/14O0wq4Befn-BKv2DVU8tKGajGa0u-9nW/preview" width="100%" height="600px" allow="autoplay"></iframe></center>
             <p class="description">
                 The main theme behind the project is to use the basic concepts of computer graphics to draw package mostly from the scratch.<br>
                     Rivers are the backbone of human civilization. They provide us with fresh water, which is helpful for various purposes such as drinking, cleaning, washing, etc. Without rivers, life will come to a halt. Rivers just keep on flowing without any stop. We humans exist because of rivers. Boating is always fun and is one of the most ancient means of transportation. Riding a boat makes you connect with nature and your inner self too.<br>
