--- a/hicking.html
+++ b/hicking.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Hicking Blogs</a>
+                    <a class="nav-link active" href="hicking0.html">Hicking Blogs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Social Media</a>
@@ -283,7 +283,7 @@
             
         </div>
         <center>
-            <a href="hicking.html" class="previous">&laquo; Previous</a>
+            <a href="hicking0.html" class="previous">&laquo; Previous</a>
             <a href="hicking2.html" class="next">Next &raquo</a>
         </center>
     </body>
