--- a/hicking0.html
+++ b/hicking0.html
@@ -8,12 +8,12 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-        <link rel="stylesheet" href="resume.css">
+        <link rel="stylesheet" href="hicking.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Nikhil Prabhu K - My personal website - My Resume</title>
+        <title>Nikhil Prabhu K - My personal website - Trekking & Hicking</title>
     </head>
     <body>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -35,10 +35,10 @@
                     <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Resume</a>
+                    <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="hicking0.html">Hicking Blogs</a>
+                    <a class="nav-link active" href="#">Hicking Blogs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Social Media</a>
@@ -49,19 +49,32 @@
         </nav>
         <div class="ccontent">
             <div class="bbox0"></div>
-            <div class="bbox"><h1>Resume</h1></div>
+            <div class="bbox"><h1>Trekking and Hicking</h1></div>
+            <q>Ecological sustenance and the Inclusive nature of spiritual process are inseperable</q>
         </div>
         <br>
         <div class="maincont">
-            <img src="images/NikResume54_PNG.png" alt="resume" class="imgresume">
-            <div class="btns">
-                <a href="images/NikResume54.pdf" download="Nikhil Prabhu K - Resume(pdf)">
-                    <button class="downloadbtn" type="button">Download PDF</button>
-                </a>
-                <a href="images/NikResume54_PNG.png" download="Nikhil Prabhu K - Resume(png)">
-                    <button class="downloadbtn" type="button">Download PNG</button>
-                </a>
+
+            <div class="subcont">
+                <h2 class="placename">30th Oct 2021 - Padubidre Beach (Blue flag)</h2>
+                <div class="partleft">
+                    <figure>
+                        <img src="images/padubidre_beach_1.jpeg" alt="belur" class="potrimg" >
+                        <figcaption class="caption">Unexpected and sudden plan to Padubidre beach. It is one of the blue flaged beach in India</figcaption>
+                    </figure>
+                </div>
+                <div class="partright">
+                    <figure>
+                        <img src="images/padubidre_beach_2.jpeg" alt="belur" class="potrimg">
+                    <figcaption class="caption">Kayaking in Kamini River with friends</figcaption>
+                    </figure>
+                </div>
             </div>
+
+
         </div>
+        <center>
+            <a href="hicking.html" class="next">Next &raquo</a>
+        </center>
     </body>
 </html>
