--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="resume.html">Resume</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="hicking.html">Hicking Blogs</a>
+                <a class="nav-link" href="hicking0.html">Hicking Blogs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Social Media</a>
