--- a/hicking0.html
+++ b/hicking0.html
@@ -59,13 +59,13 @@
                 <h2 class="placename">30th Oct 2021 - Padubidre Beach (Blue flag)</h2>
                 <div class="partleft">
                     <figure>
-                        <img src="images/padubidre_beach_1.jpeg" alt="belur" class="potrimg" >
+                        <img src="images/padubidre_beach_1.jpeg" alt="padubidre" class="potrimg" >
                         <figcaption class="caption">Unexpected and sudden plan to Padubidre beach. It is one of the blue flaged beach in India</figcaption>
                     </figure>
                 </div>
                 <div class="partright">
                     <figure>
-                        <img src="images/padubidre_beach_2.jpeg" alt="belur" class="potrimg">
+                        <img src="images/padubidre_beach_2.jpeg" alt="padubidre" class="potrimg">
                     <figcaption class="caption">Kayaking in Kamini River with friends</figcaption>
                     </figure>
                 </div>
